# numpyrge256

./: .gitignore  README.md  pyproject.toml  src
.github/workflows/: publish.yml  test.yml
Nnumpyrge256/: __init__.py  numpyrge256.py
rge256/: __init__.py  rge256.py
tests/: test_basic.py
